--- a/alurapic/package.json
+++ b/alurapic/package.json
@@ -11,16 +11,12 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1",
     "vee-validate": "^2.0.0-beta.18",
     "vue": "^2.5.11",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -29,7 +25,7 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.25.0",
     "file-loader": "^1.1.4",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.14.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
